Simplify to List.of()..